--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,6 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: check-added-large-files
-    -   id: check-json
+    #-   id: check-json
     -   id: check-merge-conflict
     -   id: detect-private-key
