--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend:latest
   restart: always
   container_name: sausage-store-backend
+  environment:
+    - DATA_SOURCE_CONNECT=$DATA_SOURCE_CONNECT
+    - DATA_SOURCE_NAME=$DATA_SOURCE_NAME
+    - DATA_SOURCE_PASS=$DATA_SOURCE_PASS
+    - MONGO_CONNECT=$MONGO_CONNECT
   networks:
     - net-sausage-store
 
