--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend:latest
   restart: always
   container_name: sausage-store-backend
+  environment:
+    SPRING_DATASOURCE_URL: $SPRING_DATASOURCE_URL
+    SPRING_DATASOURCE_USERNAME: $SPRING_DATASOURCE_USERNAME
+    SPRING_DATASOURCE_PASSWORD: $SPRING_DATASOURCE_PASSWORD
+    SPRING_DATA_MONGODB_URI: $SPRING_DATA_MONGODB_URI
   networks:
     - net-sausage-store
 
