--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -12,6 +12,9 @@ include:
 
 hadolint_dockerfile:
   stage: lint
+  image: docker:stable-dind
+  services:
+      - docker:dind
   script:
       - cd backend
       - docker run --rm -i hadolint/hadolint < ./Dockerfile
