--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -12,7 +12,7 @@ include:
 
 hadolint_dockerfile:
   stage: lint
-  image: docker:stable-dind
+  image: hadolint/hadolint:v2.8.0-alpine
   services:
       - docker:dind
   before_script:
