--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -16,8 +16,7 @@ hadolint_dockerfile:
   services:
       - docker:dind
   script:
-      - cd backend
-      - hadolint --ignore DL3000 --ignore DL3045 --ignore SC2059 --ignore DL3025 < ./Dockerfile
+      - hadolint --ignore DL3000 --ignore DL3045 --ignore SC2059 --ignore DL3025 < backend/Dockerfile
 
 build-code-job:
     stage: build
