--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -17,7 +17,7 @@ hadolint_dockerfile:
       - docker:dind
   script:
       - ls -l
-      - hadolint --ignore DL3000 --ignore DL3045 --ignore SC2059 --ignore DL3025 < backend/Dockerfile
+      - hadolint --ignore DL3000 --ignore DL3045 --ignore SC2059 --ignore DL3025 backend/Dockerfile
 
 build-code-job:
     stage: build
