--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,11 +3,24 @@ management.security.enabled=false
 spring.datasource.url=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9:6432/sausage
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=sausage
-spring.datasource.password=your_password
+#теперь берем с vault
+#spring.datasource.password=your_password
 #spring.jpa.hibernate.ddl-auto=create
 
 #spring.datasource.name=ecommercedb
 spring.jpa.show-sql=false
 
-spring.data.mongodb.uri=mongodb://sausage:your_password@rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true
-#spring.data.mongodb.uri=mongodb://user:pass@host:port/db?tls=true
+#spring.data.mongodb.uri=mongodb://sausage:your_password@rc1a-yyq5hcvv7rfjmbaz.mdb.yandexcloud.net:27018/sausage?tls=true
+
+spring.application.name=sausage-store
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# наш токен для подключения к Vault
+spring.cloud.vault.token=myroot
+# протокол, по которому доступно API Vault, в проде лучше сделать https
+spring.cloud.vault.scheme=http
+#spring.cloud.vault.host=51.250.7.70
+#spring.cloud.vault.host=84.201.173.228
+spring.cloud.vault.kv.enabled=true
+spring.config.import=vault://secret/${spring.application.name}
