--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,11 @@ services:
   restart: always
   container_name: sausage-store-backend
   environment:
+    SPRING_CLOUD_VAULT_TOKEN: $SPRING_CLOUD_VAULT_TOKEN
+    SPRING_CLOUD_VAULT_HOST: $SPRING_CLOUD_VAULT_HOST
     SPRING_DATASOURCE_URL: $SPRING_DATASOURCE_URL
     SPRING_DATASOURCE_USERNAME: $SPRING_DATASOURCE_USERNAME
-    SPRING_DATASOURCE_PASSWORD: $SPRING_DATASOURCE_PASSWORD
+    #SPRING_DATASOURCE_PASSWORD: $SPRING_DATASOURCE_PASSWORD
     SPRING_DATA_MONGODB_URI: $SPRING_DATA_MONGODB_URI
   networks:
     - net-sausage-store
