--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ services:
     - '8200:8200'
   environment:
     VAULT_DEV_ROOT_TOKEN_ID: "myroot"
-    VAULT_SERVER: "http://127.0.0.1:8200"
-    VAULT_ADDR: "http://127.0.0.1:8200"
+    VAULT_SERVER: "http://vault:8200"
+    VAULT_ADDR: "http://vault:8200"
+  networks:
+    - net-sausage-store
 
  frontend:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-frontend:latest
