--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,21 @@ services:
   networks:
     - net-sausage-store
 
+ backend-report:
+  image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend-report:latest
+  restart: always
+  container_name: sausage-store-backend-report
+  environment:
+    SPRING_CLOUD_VAULT_TOKEN: $SPRING_CLOUD_VAULT_TOKEN
+    SPRING_CLOUD_VAULT_HOST: $SPRING_CLOUD_VAULT_HOST
+    SPRING_DATASOURCE_URL: $SPRING_DATASOURCE_URL
+    SPRING_DATASOURCE_USERNAME: $SPRING_DATASOURCE_USERNAME
+    #SPRING_DATASOURCE_PASSWORD: $SPRING_DATASOURCE_PASSWORD
+    SPRING_DATA_MONGODB_URI: $SPRING_DATA_MONGODB_URI
+  networks:
+    - net-sausage-store
+
+
 networks:
  net-sausage-store:
   driver: bridge
