--- a/backend-report/.gitlab-ci.yml
+++ b/backend-report/.gitlab-ci.yml
@@ -28,15 +28,14 @@ build-code-job:
       - docker login -u gitlab-ci-token -p ${CI_JOB_TOKEN} ${CI_REGISTRY}
     script:
       - cd backend-report
-      - docker build --cache-from ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:latest --build-arg APP_VERSION=${VERSION} -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_REF_SLUG} .
-      - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_REF_SLUG}
+      - docker build --cache-from ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:latest --build-arg APP_VERSION=${VERSION} -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_SHORT_SHA} .
+      - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_SHORT_SHA}
 
 sast:
   stage: test
   variables:
     SAST_DEFAULT_ANALYZERS: eslint,semgrep,spotbugs
     SAST_EXCLUDED_ANALYZERS: "nodejs-scan"
-#    SECURE_LOG_LEVEL: "debug"
 
 sonarqube-check-backend-report:
     stage: test
@@ -70,19 +69,14 @@ sonarqube-check-backend-report:
 upload-release:
     stage: release
     image: docker:stable-dind
-    variables:
-        DOCKER_HOST: tcp://docker:2376
-        DOCKER_TLS_CERTDIR: "/certs"
-        DOCKER_TLS_VERIFY: 1
-        DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
     services:
       - docker:dind
     before_script:
       - until docker info; do sleep 1; done
       - docker login -u gitlab-ci-token -p ${CI_JOB_TOKEN} ${CI_REGISTRY}
     script:
-      - docker pull ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_REF_SLUG}
-      - docker tag ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_REF_SLUG}
+      - docker pull ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_SHORT_SHA}
+      - docker tag ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:${CI_COMMIT_SHORT_SHA}
                    ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:latest
       - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}-backend-report:latest
     after_script:
@@ -101,7 +95,6 @@ deploy:
       - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
       - chmod 644 ~/.ssh/known_hosts
     script:
-      #- echo -e "SPRING_DATASOURCE_URL=$DATA_SOURCE_CONNECT\nSPRING_DATASOURCE_USERNAME=$DATA_SOURCE_NAME\nSPRING_DATASOURCE_PASSWORD=$DATA_SOURCE_PASS\nSPRING_DATA_MONGODB_URI=$MONGO_CONNECT\n" > .env_file
       - echo -e "SPRING_CLOUD_VAULT_TOKEN=$VAULT_TOKEN\nSPRING_CLOUD_VAULT_HOST=$VAULT_HOST\nSPRING_DATASOURCE_URL=$DATA_SOURCE_CONNECT\nSPRING_DATASOURCE_USERNAME=$DATA_SOURCE_NAME\nSPRING_DATA_MONGODB_URI=$MONGO_CONNECT\n" > .env_file
       - scp -r ./.env_file ./sausage-store.service ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/
       - ssh ${DEV_USER}@${DEV_HOST}
