--- a/backend-report/Dockerfile
+++ b/backend-report/Dockerfile
@@ -11,7 +11,7 @@ ARG APP_VERSION
 #Create app directory
 WORKDIR /usr/src/app
 
-RUN apk --no-cache add curl:7.55.0-r2
+RUN apk --no-cache add curl=7.55.0-r2
 
 RUN curl https://storage.yandexcloud.net/cloud-certs/CA.pem -o YandexInternalRootCA.crt && \
     keytool -importcert -file YandexInternalRootCA.crt -alias yandex -cacerts -storepass changeit -noprompt && \
