--- a/backend-report/.gitlab-ci.yml
+++ b/backend-report/.gitlab-ci.yml
@@ -96,7 +96,7 @@ deploy:
       - chmod 644 ~/.ssh/known_hosts
     script:
       - echo -e "SPRING_CLOUD_VAULT_TOKEN=$VAULT_TOKEN\nSPRING_CLOUD_VAULT_HOST=$VAULT_HOST\nSPRING_DATASOURCE_URL=$DATA_SOURCE_CONNECT\nSPRING_DATASOURCE_USERNAME=$DATA_SOURCE_NAME\nSPRING_DATA_MONGODB_URI=$MONGO_CONNECT\n" > .env_file
-      - scp -r ./.env_file ./sausage-store.service ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/
+      - scp -r ./.env_file ./sausage-store.service ./docker-compose.yml ./nginx.tmpl ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/
       - ssh ${DEV_USER}@${DEV_HOST}
         "export "VERSION=${VERSION}";
         export "DEV_USER=${DEV_USER}";
