--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,25 @@ services:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-frontend:latest
   restart: always
   container_name: sausage-store-frontend
+  environment:
+    DEFAULT_HOST: sausage-store-backend
+  volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./nginx.tmpl:/app/nginx.tmpl
   ports:
     - '80:80'
-    - '8080:8080'
 
  backend:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend:latest
   restart: always
-  container_name: sausage-store-backend
+  #container_name: sausage-store-backend
   environment:
     SPRING_CLOUD_VAULT_TOKEN: $SPRING_CLOUD_VAULT_TOKEN
     SPRING_CLOUD_VAULT_HOST: $SPRING_CLOUD_VAULT_HOST
     SPRING_DATASOURCE_URL: $SPRING_DATASOURCE_URL
     SPRING_DATASOURCE_USERNAME: $SPRING_DATASOURCE_USERNAME
     SPRING_DATA_MONGODB_URI: $SPRING_DATA_MONGODB_URI
+    VIRTUAL_HOST: sausage-store-backend
 
  backend-report:
   image: gitlab.praktikum-services.ru:5050/00_burunov_m/sausage-store/sausage-store-backend-report:latest
