--- a/kubernetes/all/secrets_spring_cloud_vault_host.yaml
+++ b/kubernetes/all/secrets_spring_cloud_vault_host.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: spring-cloud-vault-token
+  name: spring-cloud-vault-host
   labels:
     app: vault
 type: Opaque
 data:
-  spring-cloud-vault-token: "bXlyb290"
+  spring-cloud-vault-host: "NTEuMjUwLjcuNzA="
