--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -23,7 +23,10 @@ spec:
           imagePullPolicy: Always
           env:
             - name: SPRING_CLOUD_VAULT_HOST
-              value: 51.250.7.70
+              valueFrom:
+                secretKeyRef:
+                  name: spring-cloud-vault-host
+                  key: spring-cloud-vault-host
             - name: SPRING_CLOUD_VAULT_TOKEN
               valueFrom:
                 secretKeyRef:
@@ -34,7 +37,7 @@ spec:
           ports:
             - name: backend
               containerPort: 8080
-          livenessProbe:
+          startupProbe:
             httpGet:
               path: /actuator/health
               port: 8080
