--- a/kubernetes/frontend/deployment.yaml
+++ b/kubernetes/frontend/deployment.yaml
@@ -28,14 +28,15 @@ spec:
                 readOnly: true
           env:
             - name: SPRING_CLOUD_VAULT_HOST
-              value: 51.250.7.70
+              valueFrom:
+                secretKeyRef:
+                  name: spring-cloud-vault-host
+                  key: spring-cloud-vault-host
             - name: SPRING_CLOUD_VAULT_TOKEN
               valueFrom:
                 secretKeyRef:
                   name: spring-cloud-vault-token
                   key: spring-cloud-vault-token
-            - name: DEFAULT_HOST
-              value: sausage-store-backend
           ports:
             - name: frontend
               containerPort: 8080
