Prometheus metrics added

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.cloud.vault.scheme=http
 #spring.cloud.vault.host=84.201.173.228
 spring.cloud.vault.kv.enabled=true
 spring.config.import=vault://secret/${spring.application.name}
+
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=health,prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
