--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 management.security.enabled=false
 
-spring.datasource.url=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9:6432/sausage
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=sausage
+#spring.datasource.url=jdbc:postgresql://c-c9qe9747e5iuq9h12lg9:6432/sausage
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=sausage
 #теперь берем с vault
 #spring.datasource.password=your_password
 #spring.jpa.hibernate.ddl-auto=create
@@ -17,7 +17,7 @@ spring.application.name=sausage-store
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # наш токен для подключения к Vault
-spring.cloud.vault.token=myroot
+#spring.cloud.vault.token=myroot
 # протокол, по которому доступно API Vault, в проде лучше сделать https
 spring.cloud.vault.scheme=http
 #spring.cloud.vault.host=51.250.7.70
@@ -29,3 +29,4 @@ management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=health,prometheus
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
+spring.flyway.enabled=false
